--- a/doc/api.yaml
+++ b/doc/api.yaml
@@ -27,20 +27,10 @@ components:
       type: object
       description: this is the entire user object which includes the username, the identifier and additional information.
       properties:
-        userid: {$ref: '#/components/schemas/userid'}
         username: {$ref: '#/components/schemas/username'}
         banned: {$ref: '#/components/schemas/listbanned'}
         followers: {$ref: '#/components/schemas/followers'}
         following: {$ref: '#/components/schemas/following'}
-
-    userid:
-      title: userid
-      type: string
-      description: This is a unique user identifier that does not change with the username. It will be passed as Token in the Bearer Authentication.
-      pattern: '^.*?$'
-      minLength: 3
-      maxLength: 29
-      example: "01234abcdef1234a1234b1234c012"
 
     username: 
       title: username
@@ -56,24 +46,24 @@ components:
       type: array
       description: this is the list of users banned by a user.
       minItems: 0
-      maxItems: 10000000000000
-      items: {$ref: '#/components/schemas/userid'}
+      maxItems: 10000
+      items: {$ref: '#/components/schemas/username'}
     
     following:
       title: following
       type: array
       description: this is the list of users followed by a user.
       minItems: 0
-      maxItems: 10000000000000
-      items: {$ref: '#/components/schemas/userid'}
+      maxItems: 10000
+      items: {$ref: '#/components/schemas/username'}
     
     followers:
       title: followers
       type: array
       description: this is the list of users following a user.
       minItems: 0
-      maxItems: 10000000000000
-      items: {$ref: '#/components/schemas/userid'}
+      maxItems: 10000
+      items: {$ref: '#/components/schemas/username'}
 
   #PHOTO
     photo:
@@ -81,7 +71,7 @@ components:
       type: object
       description: this is the photo object, which includes the picture posted and all the additional relevant information such as the owner, the date and time it was posted, an optional description and the number of likes.
       properties:
-        userid: {$ref: '#/components/schemas/userid'}
+        username: {$ref: '#/components/schemas/username'}
         photoid: {$ref: '#/components/schemas/photoid'}
         photofile: {$ref: '#/components/schemas/photofile'}
         datetime: {$ref: '#/components/schemas/datetime'}
@@ -123,7 +113,7 @@ components:
         commentcontent: {$ref: '#/components/schemas/commentcontent'}
         commentid: {$ref: '#/components/schemas/commentid'} #used to delete a specific comment
         #the user id is not enough because one user can write multiple comments
-        userid: {$ref: '#/components/schemas/userid'}
+        username: {$ref: '#/components/schemas/username'}
         datetime: {$ref: '#/components/schemas/datetime'}
 
     commentid:
@@ -152,7 +142,7 @@ components:
       properties:
         likeid: {$ref: '#/components/schemas/likeid'}
         photoid: {$ref: '#/components/schemas/photoid'}
-        userid: {$ref: '#/components/schemas/userid'}
+        username: {$ref: '#/components/schemas/username'}
     
     likeid:
       title: commentid
@@ -171,13 +161,6 @@ components:
       required: true
       description: used to search a user
       schema: {$ref: '#/components/schemas/username'}
-      
-    userid:
-      name: userid
-      in: path
-      required: true
-      description: used to perform the operation concerning a user
-      schema: {$ref: '#/components/schemas/userid'}
     
     likeid:
       name: likeid
@@ -186,19 +169,19 @@ components:
       description: used to perform the operation concerning a user
       schema: {$ref: '#/components/schemas/likeid'}
     
-    followinguserid:
-      name: followinguserid
+    followingusername:
+      name: followingusername
       in: path
       required: true
       description: used to perform the operation concerning a user followed by another user
-      schema: {$ref: '#/components/schemas/userid'}
+      schema: {$ref: '#/components/schemas/username'}
     
-    banneduserid:
-      name: banneduserid
+    bannedusername:
+      name: bannedusername
       in: path
       required: true
       description: used to perform the operation concerning a user banned by another user
-      schema: {$ref: '#/components/schemas/userid'}
+      schema: {$ref: '#/components/schemas/username'}
     
     photoid:
       name: photoid
@@ -236,12 +219,12 @@ paths:
           description: User log-in action successful 
           content:
             application/json: 
-              schema: {$ref: '#/components/schemas/userid'}
+              schema: {$ref: '#/components/schemas/username'}
       security:
         - bearerAuth: []
 
   /users/{username}:
-    summary: specific profile of the user corresponding to that userid.
+    summary: specific profile of the user corresponding to that username.
     parameters: 
       - $ref : "#/components/parameters/username"
 
@@ -251,15 +234,10 @@ paths:
       summary: Change your own username.
       description: Change the username of one's own profile, with the one provided provided in input. The outcome of the operation is returned (either successful or not authorized). This operation can be performed only by the owner of the profile, so authentication is required.
       requestBody:
-        description: new username and userid to confirm the user's identity
+        description: new username and username to confirm the user's identity
         content:
           application/json:
-            schema:
-              type: object
-              description: Only necessary values for user to be returned
-              properties:
-                username: {$ref: '#/components/schemas/username'}
-                userid: {$ref: '#/components/schemas/userid'} #this is used to check that the user trying to change the username is actually the owner of the profile
+            schema: {$ref: '#/components/schemas/username'}
         required: true
       responses: 
         '200':
@@ -290,10 +268,10 @@ paths:
       security:
         - bearerAuth: []
       
-  /users/{userid}/mystream/:
+  /users/{username}/mystream/:
     summary: Stream of picture posted by the followed users.
     parameters: 
-      - $ref : '#/components/parameters/userid'
+      - $ref : '#/components/parameters/username'
 
     #Getting the stream of an account.
     get:
@@ -335,7 +313,7 @@ paths:
               description: Necessary return values for uploading photos
               properties:
                 photofile: {$ref: '#/components/schemas/photofile'}
-                userid: {$ref: '#/components/schemas/userid'}
+                username: {$ref: '#/components/schemas/username'}
 
       responses:
         '201':
@@ -357,7 +335,7 @@ paths:
       operationId: deletePhoto
       tags: ["photo"]
       summary: delete a photo from one's own profile.
-      description: given the userid of the owner of the account (i.e. userX) requesting the operation  and the photoid of the pictures that the owner wishes to delete, delete the photo object from the collection of photos posted by userX. We request for authentication of the user that wants to perform this action, since we must make sure that he/she must be the author of the picture.
+      description: given the username of the owner of the account (i.e. userX) requesting the operation  and the photoid of the pictures that the owner wishes to delete, delete the photo object from the collection of photos posted by userX. We request for authentication of the user that wants to perform this action, since we must make sure that he/she must be the author of the picture.
       responses:
         '204': 
           description: You just deleted your photo.
@@ -375,17 +353,12 @@ paths:
       operationId: likePhoto
       tags: ["photo"]
       summary: like a photo.
-      description: Given the photoid and a user requesting the operation, add the userid corresponding to the requesting user to the list of users liking that specific picture. We request for authentication of the user that wants to perform this action, since a user must have logged in to like a picture.
+      description: Given the photoid and a user requesting the operation, add the username corresponding to the requesting user to the list of users liking that specific picture. We request for authentication of the user that wants to perform this action, since a user must have logged in to like a picture.
       requestBody:
         description: user that wants to like the photo and photo that he wants to like
         content:
           application/json:
-            schema:
-              type: object
-              description: Object to return from liking
-              properties:
-                username: {$ref: '#/components/schemas/photoid'}
-                userid: {$ref: '#/components/schemas/userid'} #this is used to check that the user trying to change the username is actually the owner of the profile
+            schema: {$ref: '#/components/schemas/photoid'}
         required: true
       responses:
         '201': 
@@ -407,7 +380,7 @@ paths:
       operationId: unlikePhoto
       tags: ["photo"]
       summary: Unlike a photo.
-      description: Given the likeid and a user requesting the operation, delete the userid corresponding to the requesting user to the list of users liking that specific picture. We request for authentication of the user that wants to perform this action, since a user must have liked the picture before.
+      description: Given the likeid and a user requesting the operation, delete the username corresponding to the requesting user to the list of users liking that specific picture. We request for authentication of the user that wants to perform this action, since a user must have liked the picture before.
       responses:
         '204': 
           description: You unliked the photo.
@@ -433,7 +406,7 @@ paths:
               description: Information about the comment and who posted it
               properties:
                 comment: {$ref: '#/components/schemas/commentcontent'}
-                userid: {$ref: '#/components/schemas/userid'} #this is used to check that the user trying to change the username is actually the owner of the profile
+                username: {$ref: '#/components/schemas/username'} #this is used to check that the user trying to change the username is actually the owner of the profile
         required: true
       responses:
         '201': 
@@ -467,14 +440,14 @@ paths:
       security:
         - bearerAuth: []
 
-  /users/{userid}/following/: 
+  /users/{username}/following/: 
     parameters: 
-      - $ref : "#/components/parameters/userid"
+      - $ref : "#/components/parameters/username"
     post:
       operationId: followUser
       tags: ["user"]
       summary: Follow a another user.
-      description: given the userid of the owner of the account (i.e. userX) requesting the operation, follow the user corresponding to the username passed in input and add the corresponding userid to the collection of users followed by userX. We request for authentication of the user that wants to perform this action, since we must make sure that the user that the followed user did not ban the author of the request. Also the userid of the user requesting the operation must be different from the userid corresponding to the username given in input.
+      description: given the username of the owner of the account (i.e. userX) requesting the operation, follow the user corresponding to the username passed in input and add the corresponding username to the collection of users followed by userX. We request for authentication of the user that wants to perform this action, since we must make sure that the user that the followed user did not ban the author of the request. Also the username of the user requesting the operation must be different from the username corresponding to the username given in input.
       requestBody:
         description: username of the user that we want to follow
         content:
@@ -492,15 +465,15 @@ paths:
       security:
         - bearerAuth: []
   
-  /users/{userid}/following/{followinguserid}: 
+  /users/{username}/following/{followingusername}: 
     parameters: 
-      - $ref : "#/components/parameters/userid"
-      - $ref : "#/components/parameters/followinguserid"
+      - $ref : "#/components/parameters/username"
+      - $ref : "#/components/parameters/followingusername"
     delete:
       operationId: unfollowUser
       tags: ["user"]
       summary: Unfollow another user.
-      description: given the userid of the owner of the account (i.e. userX) requesting the operation, unfollow the user corresponding to the username passed in input and delete the corresponding userid from the collection of users followed by userX. We request for authentication of the user that wants to perform this action, since we must make sure that the user that the unfollowed user was initially followed. Also the userid of the user requesting the operation must be different from the userid corresponding to the username given in input.
+      description: given the username of the owner of the account (i.e. userX) requesting the operation, unfollow the user corresponding to the username passed in input and delete the corresponding username from the collection of users followed by userX. We request for authentication of the user that wants to perform this action, since we must make sure that the user that the unfollowed user was initially followed. Also the username of the user requesting the operation must be different from the username corresponding to the username given in input.
       responses:
         '204': 
           description: You just unfollowed the user.
@@ -509,15 +482,15 @@ paths:
       security:
         - bearerAuth: []
     
-  /users/{userid}/banned/:   
+  /users/{username}/banned/:   
     parameters: 
-      - $ref : "#/components/parameters/userid"
+      - $ref : "#/components/parameters/username"
     
     post:
       operationId: banUser
       tags: ["user"]
       summary: Ban another user.
-      description: given the userid of the owner of the account (i.e. userX) requesting the operation, ban the user corresponding to the username passed in input and add the corresponding userid to the collection of users banned by userX. We request for authentication of the user that wants to perform this action, since we have to make sure that the author of the request is the owner of the account. Also the userid of the user requesting the operation must be different from the userid corresponding to the username given in input.
+      description: given the username of the owner of the account (i.e. userX) requesting the operation, ban the user corresponding to the username passed in input and add the corresponding username to the collection of users banned by userX. We request for authentication of the user that wants to perform this action, since we have to make sure that the author of the request is the owner of the account. Also the username of the user requesting the operation must be different from the username corresponding to the username given in input.
       requestBody:
         description: username of the user that we want to ban
         content:
@@ -535,15 +508,15 @@ paths:
       security:
         - bearerAuth: []
 
-  /users/{userid}/banned/{banneduserid}:   
+  /users/{username}/banned/{bannedusername}:   
     parameters: 
-      - $ref : "#/components/parameters/userid"
-      - $ref : "#/components/parameters/banneduserid"
+      - $ref : "#/components/parameters/username"
+      - $ref : "#/components/parameters/bannedusername"
     delete:
       operationId: unbanUser
       tags: ["user"]
       summary: Unban another user.
-      description: given the userid of the owner of the account (i.e. userX) requesting the operation, unban the user corresponding to the username passed in input and delete the corresponding userid from the collection of users banned by userX. We request for authentication of the user that wants to perform this action, since we must make sure that the user that the unbanned user was initially banned. Also the userid of the user requesting the operation must be different from the userid corresponding to the username given in input.
+      description: given the username of the owner of the account (i.e. userX) requesting the operation, unban the user corresponding to the username passed in input and delete the corresponding username from the collection of users banned by userX. We request for authentication of the user that wants to perform this action, since we must make sure that the user that the unbanned user was initially banned. Also the username of the user requesting the operation must be different from the username corresponding to the username given in input.
       responses:
         '204': 
           description: You just unbanned the user.
