no errors on do-login

--- a/doc/api.yaml
+++ b/doc/api.yaml
@@ -220,6 +220,10 @@ paths:
           content:
             application/json: 
               schema: {$ref: '#/components/schemas/username'}
+        '400': 
+          description: Bad request
+        '500': 
+          description: internal server error
       security:
         - bearerAuth: []
 
