--- a/doc/api.yaml
+++ b/doc/api.yaml
@@ -216,7 +216,7 @@ paths:
             schema: {$ref: '#/components/schemas/username'}
         required: true 
       responses:
-        '200':
+        '201':
           description: User log-in action successful 
           content:
             text/plain: 
@@ -247,6 +247,9 @@ paths:
       responses: 
         '200':
           description: the username has been successfully changes and it's returned.
+          content:
+            application/json:
+              schema: {$ref: '#/components/schemas/username'}
         '403': 
           description: You cannot perform this operation.
       security:
