--- a/doc/api.yaml
+++ b/doc/api.yaml
@@ -33,7 +33,7 @@ components:
       description: this is the entire user object which includes the username, the identifier and additional information.
       properties:
         username: {$ref: '#/components/schemas/username'}
-        banned: {$ref: '#/components/schemas/listbanned'}
+        banned: {$ref: '#/components/schemas/banned'}
         following: {$ref: '#/components/schemas/following'}
         token: {$ref: '#/components/schemas/token'}
 
@@ -52,8 +52,8 @@ components:
       description: token of the user used for auth
       example: 1
     
-    listbanned:
-      title: listbanned
+    banned:
+      title: banned
       type: array
       description: this is the list of users banned by a user.
       minItems: 0
@@ -216,8 +216,13 @@ paths:
             schema: {$ref: '#/components/schemas/username'}
         required: true 
       responses:
+        '200':
+          description: User exists and log-in action successful 
+          content:
+            text/plain: 
+              schema: {$ref: '#/components/schemas/token'}
         '201':
-          description: User log-in action successful 
+          description: User created and log-in action successful 
           content:
             text/plain: 
               schema: {$ref: '#/components/schemas/token'}
@@ -370,7 +375,7 @@ paths:
           description: You liked the photo.
           content:
             application/json:
-              schema: {$ref: '#/components/schemas/likeid'}
+              schema: {$ref: '#/components/schemas/like'}
         '403': 
           description: You cannot perform this operation.
       security:
